ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName26/input.ts.stderr
error[1164]: Computed property names are not allowed in enums
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName26/input.ts:4:5
  |
4 |     [e] = 0
  |     ^^

